[fix] alignment for project links have been fixed

--- a/main.css
+++ b/main.css
@@ -134,7 +134,6 @@ nav li a {
 
 .thumbnail p {
 	color: black;
-	text-align: center;
 	padding: 10px 0px;
 	font-weight: bold;
 	font-size: 15px;
@@ -148,13 +147,23 @@ nav li a {
 	background-color: var(--green);
 	overflow: hidden;
 	width: 100%;
-	height: 0;
+	/* remove the hover property */
+	height: 100%;
 	transition: .5s ease;
+	align-content: space-between; 
+	padding: 10px; 
+
+}
+.project-link {
 	display: flex; 
 	justify-content: center; 
+	margin-top: 20px; 
 }
+
 .project-header {
 	font-weight: bold; 
+	text-align: center;
+	margin-bottom: 20px; 
 }
 
 .thumbnail:hover .project-name {
